adjustments to cropper container, trying to make it fixed position on page center

--- a/main/static/css/onboarding.css
+++ b/main/static/css/onboarding.css
@@ -17,6 +17,13 @@ body {
 
 }
 
+.cropper-container {
+    position: fixed; 
+    top:50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+}
+
 .yb-pages-back {
     border-radius: 10px;
     height: 40px;
